HW/HW1/results/hodamarjela_results.txt
Tester.java:11: error: cannot find symbol
		Segment seg = new Segment(a, b);
		^
  symbol:   class Segment
  location: class Tester
Tester.java:11: error: cannot find symbol
		Segment seg = new Segment(a, b);
		                  ^
  symbol:   class Segment
  location: class Tester
2 errors
